--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -2,7 +2,7 @@
 File name:styles
 Author:Matthew w
 */
-body{background-image:;padding-right:120px;
+body{background-color:#228B22;padding-right:0px;
 }
 
 main{
@@ -10,10 +10,10 @@ main{
 	margin-right:320px;
 	border-color:#C0C0C0;}
 	
-login-panel{background-color:}
+login-panel{background-color:#FFF;}
 
 main-panel{border-bottom:solid; 
-           border-bottom-color:#228B22 }
+           border-bottom-color:#228B22; }
 main-back{paddin:120px 120px 120px 120px;}
-signup-panel{background-color:#A5FF7F}
+signup-panel{background-color:#A5FF7F;}
 
