--- a/app/templates/styles.css
+++ b/app/templates/styles.css
@@ -11,7 +11,7 @@ body{
 	background-color:#C0C0C0;
 	border-color:#C0C0C0;
 	margin:0 auto;
-	padding-top:0px;
+	padding-top:0;
 }
 
 #main-backgrnd{
