--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -29,7 +29,7 @@
 	
 	
 	<div class="list-group">
-  <a href="#" class="list-group-item">first list</a>
+  <a href="view_items.html" class="list-group-item">Anns list</a>
   <a href="#" class="list-group-item">Second list</a>
   <a href="#" class="list-group-item">Third list</a>
 	</div>
